<resources>
    <string name="app_name">FNF_FE_Application</string>
    <string name="title_activity_etape1">Etape_1</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_etape2">Etape_2</string>
    <string name="title_activity_etape3">Etape_3</string>
    <string name="title_activity_etape4">Etape_4</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fiche_d_execution">Fiche d\'execution</string>
    <string name="formulaire_de_notification_des_faits">Formulaire de Notification des Faits</string>
    <string name="se_connecter">Se connecter</string>
    <string name="bienvenue_dans_l_application_de_remplissage_de_formulaire">Bienvenue dans l\'application de remplissage de formulaire</string>
    <string name="etape_1_donn_es_sur_l_entit_source_de_l_information">Etape 1 : DONNÉES SUR L\'ENTITÉ SOURCE DE L\'INFORMATION</string>
    <string name="suivant">Suivant</string>
    <string name="nom">Nom :</string>
    <string name="entrez_un_nom">Entrez un nom</string>
    <string name="fonction">Fonction :</string>
    <string name="service">Service :</string>
    <string name="tel">Tel :</string>
    <string name="mail">Mail :</string>
    <string name="entrez_une_fonction">Entrez une fonction</string>
    <string name="entrez_un_service">Entrez un service</string>
    <string name="entrez_un_num_ro_de_t_l_phone">Entrez un numéro de téléphone</string>
    <string name="entrez_une_adresse_mail">Entrez une adresse mail</string>
    <string name="fonction2">Fonction :</string>
    <string name="tel2">Tel :</string>
    <string name="title_activity_step1">Step_1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="etape_2_informations_generales">Etape 2 : INFORMATIONS GÉNÉRALES</string>
    <string name="pr_c_dent">Précédent</string>
    <string name="date">Date :</string>
    <string name="heure">Heure :</string>
    <string name="_1_date_et_heure_du_fait"><u>1 : Date et heure du fait</u></string>
    <string name="_2_localisation_du_fait"><u>2 : Localisation du fait</u></string>
    <string name="plan_quadrill">Plan quadrillé :</string>
    <string name="lieu_exact">Lieu Exact :</string>
    <string name="etape_3_occurence">Etape 3 : OCCURENCE</string>
    <string name="button">Button</string>
    <string name="annexe">Annexe :</string>
    <string name="description">Description </string>
    <string name="cause">Cause :</string>
    <string name="impact">Impact :</string>
    <string name="classe">Classe :</string>
    <string name="type_d_v_nement">Type d\'évènement :</string>
    <string name="voir_la_liste_des_engins_impliqu_es">Voir la liste des engins impliquées</string>
    <string name="ajouter_un_engin_impliqu">Ajouter un engin impliqué</string>
    <string name="voir_la_liste_des_personnes_impliqu_es">Voir la liste des personnes impliquées</string>
    <string name="ajouter_une_personne_impliqu_e">Ajouter une personne impliquée</string>
    <string name="ajouter_un_fichier">Ajouter un fichier</string>
    <string name="etape_4_mesures_imm_diates">Etape 4 : MESURES IMMÉDIATES</string>
    <string name="description4">Description :</string>
    <string name="responsable">Responsable :</string>
    <string name="revenir_l_tape_4">Revenir à l\'étape 4</string>
    <string name="revenir_l_tape_3">Revenir à l\'étape 3</string>
    <string name="revenir_l_tape_2">Revenir à l\'étape 2</string>
    <string name="revenir_l_tape_1">Revenir à l\'étape 1</string>
    <string name="avant_de_confirmer_et_d_envoyer_le_formulaire_vous_pouvez_revenir_vers_l_une_des_tapes">Avant de confirmer et d’envoyer le formulaire, vous pouvez revenir vers l’une des étapes</string>
    <string name="annuler_le_formulaire">Annuler le formulaire</string>
    <string name="confirmer_et_envoyer">Confirmer et envoyer</string>
    <string name="annuler">Annuler</string>
    <string name="se_connecter_et_envoyer">Se connecter et envoyer</string>
    <string name="formulaire_sauvegard_veuillez_vous_connecter_pour_l_envoyer">Formulaire sauvegardé ! Veuillez vous connecter pour l’envoyer</string>
    <string name="aide">Aide</string>
    <string name="nom_organisation">Nom Organisation</string>
    <string name="confirmer_et_envoyer2">Confirmer et envoyer</string>
    <string name="fiche_d_execution2">Fiche d\'execution</string>
    <string name="fiche_fnf">Fiche FNF :</string>
</resources>