<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step3Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5B2B2"
    tools:context=".FNF_Class.Etape_3">


    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/etape_3_occurence"
            android:textSize="22sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eventypeTextView"
                    android:layout_width="149dp"
                    android:layout_height="match_parent"
                    android:gravity="center|center_vertical"
                    android:text="@string/type_d_v_nement"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/eventypeInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="false">

                    <AutoCompleteTextView
                        android:id="@+id/eventypeInput"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/classTextView"
                    android:layout_width="149dp"
                    android:layout_height="match_parent"
                    android:gravity="center|center_vertical"
                    android:text="@string/classe"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/classInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="false">

                    <AutoCompleteTextView
                        android:id="@+id/classInput"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/impactTextView"
                    android:layout_width="149dp"
                    android:layout_height="match_parent"
                    android:gravity="center|center_vertical"
                    android:text="@string/impact"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/impactInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="false">

                    <AutoCompleteTextView
                        android:id="@+id/impactInput"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/causeTextView"
                    android:layout_width="149dp"
                    android:layout_height="match_parent"
                    android:gravity="center|center_vertical"
                    android:text="@string/cause"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/causeInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/causeInput"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:inputType="text"
                        android:paddingTop="10dp"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Description"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/buttonHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#2196F3"
                        android:text="@string/aide"
                        android:textColor="@color/black"
                        app:strokeColor="@color/black"
                        app:strokeWidth="3dp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionTypeInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:expandedHintEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionTypeInput"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:inputType="text"
                        android:paddingTop="10dp"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/annexeTextView"
                    android:layout_width="149dp"
                    android:layout_height="match_parent"
                    android:gravity="center|center_vertical"
                    android:text="@string/annexe"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonAnnexe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#595858"
                    android:text="@string/ajouter_un_fichier"
                    android:textColor="@color/black"
                    app:strokeColor="@color/black"
                    app:strokeWidth="3dp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/ajoutPersonne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#595858"
                android:text="@string/ajouter_une_personne_impliqu_e"
                android:textColor="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/voirPersonnes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#AA5C5C"
                android:text="@string/voir_la_liste_des_personnes_impliqu_es"
                android:textColor="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/ajoutEngin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#595858"
                android:text="@string/ajouter_un_engin_impliqu"
                android:textColor="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/voirEngins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#AA5C5C"
                android:text="@string/voir_la_liste_des_engins_impliqu_es"
                android:textColor="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4">

        <Button
            android:id="@+id/buttonPrevious3"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#F44336"
            android:text="@string/pr_c_dent"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonNext3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/buttonNext3"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#6279F8"
            android:text="@string/suivant"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonPrevious3"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>