<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5B2B2"
    tools:context=".FNF_Class.FNF_Confirmation">

    <LinearLayout
        android:id="@+id/linearLayoutConf"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewConf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/avant_de_confirmer_et_d_envoyer_le_formulaire_vous_pouvez_revenir_vers_l_une_des_tapes"
            android:textSize="22sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewConf"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutConf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutConf"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/buttonBackStep1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="#3854EF"
                android:text="@string/revenir_l_tape_1"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/buttonBackStep2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/buttonBackStep2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="#3854EF"
                android:text="@string/revenir_l_tape_2"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/buttonBackStep3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonBackStep1"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/buttonBackStep3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="#3854EF"
                android:text="@string/revenir_l_tape_3"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/buttonBackStep4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonBackStep2"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/buttonBackStep4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="#3854EF"
                android:text="@string/revenir_l_tape_4"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonBackStep3"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutConf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewConf">

        <Button
            android:id="@+id/buttonAnnuler"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#F44336"
            android:text="@string/annuler_le_formulaire"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonConfirmer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/buttonConfirmer"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#6279F8"
            android:text="@string/confirmer_et_envoyer"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonAnnuler"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>